exercises/longhorn/nginx-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    app: nginx   # Add this Label so our Service can select this Pod
spec:
  containers:
  - image: nginx
    name: nginx
    ports:
      - containerPort: 80  # Expose nginx's default container port (optional but recommended)
    volumeMounts:
    - name: data
      mountPath: /usr/share/nginx/html
  volumes:
  - name: data
    persistentVolumeClaim:
      claimName: longhorn-pvc
