exercises/longhorn/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: nginx   # This must match the pod's label
  ports:
    - protocol: TCP
      port: 80      # This is the port within the cluster
      targetPort: 80  # The container's port where nginx is running
      nodePort: 30080 # External access port (if not specified, Kubernetes will assign one automatically)
  type: NodePort
